--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>条目分类管理器</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
@@ -40,6 +41,17 @@
                     <span class="toolbar-text">重做</span>
                 </button>
             </div>
+            <div class="toolbar-divider"></div>
+            <div class="toolbar-group search-group">
+                <input type="text" class="search-input" id="searchInput" placeholder="搜索..." oninput="handleSearch(this.value)" onkeydown="handleSearchKeydown(event)">
+                <button class="toolbar-btn search-nav-btn" onclick="navigateSearch(-1)" title="上一个 (Shift+Enter)">
+                    <span class="toolbar-icon">◀</span>
+                </button>
+                <button class="toolbar-btn search-nav-btn" onclick="navigateSearch(1)" title="下一个 (Enter)">
+                    <span class="toolbar-icon">▶</span>
+                </button>
+                <span class="search-counter" id="searchCounter"></span>
+            </div>
             <input type="file" id="fileInput" accept=".json" style="display: none;" onchange="handleFileOpen(event)">
         </div>
 
@@ -50,14 +62,16 @@
         <div class="row">
             <!-- 左侧：条目区域 -->
             <div class="col-md-5">
-                <h4 class="section-title">条目列表</h4>
+                <div class="section-header">
+                    <h4 class="section-title">条目列表</h4>
+                    <button class="import-btn" onclick="showImportModal('item')" title="批量导入条目">
+                        📋
+                    </button>
+                </div>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" id="itemInput" placeholder="输入条目内容...">
                     <button class="btn-custom" onclick="addItem()">添加条目</button>
                 </div>
-                <button class="btn btn-outline-secondary btn-sm mb-3" onclick="showImportModal('item')">
-                    📥 批量导入条目
-                </button>
                 <div class="item-container" id="itemContainer" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="dragLeave(event)">
                     <div class="empty-message" id="itemEmptyMessage">
                         暂无条目，请添加新条目
@@ -67,14 +81,16 @@
             
             <!-- 右侧：分类区域 -->
             <div class="col-md-7">
-                <h4 class="section-title">分类区域</h4>
+                <div class="section-header">
+                    <h4 class="section-title">分类区域</h4>
+                    <button class="import-btn" onclick="showImportModal('category')" title="批量导入分类">
+                        📋
+                    </button>
+                </div>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" id="categoryInput" placeholder="输入分类名称...">
                     <button class="btn-category" onclick="addCategory()">添加分类</button>
                 </div>
-                <button class="btn btn-outline-secondary btn-sm mb-3" onclick="showImportModal('category')">
-                    📥 批量导入分类
-                </button>
                 <div id="categoryContainer">
                     <div class="empty-message" id="categoryEmptyMessage">
                         暂无分类，请添加新分类
