添加测试模式支持和文件修改状态显示，优化自动化测试
- 在 electron-main.js 中添加测试模式支持，允许自动化测试跳过系统对话框
- 添加测试模式专用的 IPC handlers：test-set-open-file-path、test-set-save-file-path、test-clear-file-paths、test-get-mode
- 在测试模式下禁用 electron-reload，避免测试时应用自动重载
- 在 index.html 中添加文件状态显示元素 #fileStatus，用于显示当前文件名和修改状态
- 在 main.js 中更新 updateFileNameDisplay() 函数，同时更新窗口标题和文件状态元素
- 在 preload.js 中暴露测试模式 API 到渲染进程
- 修改测试用例使用测试模式 API，自动化处理系统对话框
- 添加文件修改状态相关测试用例（第 26-29 个），测试文件修改状态的显示和清除
- 优化测试用例，使用文件内容验证代替窗口标题检查

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 </button>
                 <span class="search-counter" id="searchCounter"></span>
             </div>
+            <div class="toolbar-divider"></div>
+            <div class="toolbar-group">
+                <span class="file-status" id="fileStatus" style="font-size: 14px; color: #6c757d; font-weight: 500;"></span>
+            </div>
             <input type="file" id="fileInput" accept=".json" style="display: none;" onchange="handleFileOpen(event)">
         </div>
 
