--- a/src/index.html
+++ b/src/index.html
@@ -115,9 +115,9 @@
                 <div class="modal-body">
                     <p>确定要新建文件吗？当前的所有内容将被清空。</p>
                     <div class="alert alert-warning">
-                        <strong>⚠️ 警告</strong>
+                        <strong>⚠️ 注意</strong>
                         <br>
-                        此操作将删除所有条目和分类，且无法撤销！
+                        新建文件将删除所有条目和分类，且无法撤销！
                     </div>
                 </div>
                 <div class="modal-footer">
