改进新建文件对话框：添加'保存并新建'选项，避免丢失未保存的修改

--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
                     <button type="button" class="btn btn-danger" id="confirmNewFileBtn">确定新建</button>
+                    <button type="button" class="btn btn-primary" id="saveAndNewBtn" style="display: none;">保存并新建</button>
                 </div>
             </div>
         </div>
