实现 HTML5 Sortable 拖动排序功能：支持条目、分类、分类内条目拖动排序，添加自动化测试，修复分类框拖动和库加载问题

--- a/src/index.html
+++ b/src/index.html
@@ -352,6 +352,7 @@
     </div>
 
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/html5sortable.min.js"></script>
     <script src="history.js"></script>
     <script src="main.js"></script>
 </body>
